@@ -1,21 +1,32 @@
-import java.io.IOException;
+import java.io.*;
 import java.nio.file.Files;
-import java.nio.file.Path;
 import java.nio.file.Paths;
 
 public class FileManager {
+    // Function to create a file with the specified name and content
     public static void createFile(String fileName, String content) throws IOException {
-        Path path = Paths.get(fileName);
-        Files.writeString(path, content);  // Using writeString for better text handling
+        // Write the content to the file using Files.write
+        Files.write(Paths.get(fileName), content.getBytes());
     }
 
+    // Function to retrieve the content of a file
     public static String getContentFile(String fileName) throws IOException {
-        Path path = Paths.get(fileName);
-        return Files.readString(path);  // Using readString for consistent text reading
+        // Check if the file exists
+        File file = new File(fileName);
+        if (!file.exists() || !file.isFile()) {
+            throw new FileNotFoundException("File not found: " + fileName);
+        }
+
+        // Read the content of the file using Files.readAllBytes
+        return new String(Files.readAllBytes(Paths.get(fileName)));
     }
 
-    public static void deleteFile(String fileName) throws IOException {
-        Path path = Paths.get(fileName);
-        Files.deleteIfExists(path);
+    // Function to delete a file
+    public static void deleteFile(String fileName) {
+        // Delete the file using File.delete
+        File file = new File(fileName);
+        if (file.exists()) {
+            file.delete();
+        }
     }
 }
